added project cards html content
no styling yet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+        <!--Navigation Bar Setup-->
         <nav class="navBar">
             <div class="logoBig">Jewelee</div>
             <div class="navItems">
@@ -15,16 +16,52 @@
                 </ul>
             </div>
         </nav>
+        <!--Hero Img/About me Setup-->
         <section class="heroImg">
-            <div>
-                <h1>Hello, I'm Jewelee</h1>
-                <h3>UX/UI Designer</h3>
-                <p>
-
+            <div class="greenBox">
+                <h1 class="heroText">Hello, I'm Jewelee</h1>
+                <h3 class="subTextHero">UX/UI Designer</h3>
+                <p class="bodyText">
+                    I discovered a passion for UI/UX Design while learning about web design in college. I love how involved users are in the process and seeing the final product come alive thanks to the collaboration of so many different processes and teams. I also love how UI/UX Design has people from so many different backgrounds, I think it creates so many wonderful opportunities to learn from one another.
                 </p>
-                <button>Learn More</button>
+                <p class="bodyText">
+                    I also have a passion for reading and storytelling. My favorite part of a book is always the characters. I enjoy getting to see them grow and learn as the story progresses, especially when the characters are able to surprise me with how they shape the story. 
+                </p>
+                <button class="mainButton">Learn More</button>
+            </div>
+        </section>
+        <!--Case Study Cards Setup-->
+        <section>
+            <h2 class="headerText">Projects</h2>
+            <div class="urcCard">
+                <img href="">
+                <h2>Utah Rivers Counsel Redesign</h2>
+                <h3>Overview</h3>
+                <p>Utah Rivers Council is a NPO focused on protecting Utah’s waterways and water conservation. </p>
+                <h3>The Problem</h3>
+                <p>Users want to quickly and easily navigate the website to gather information on water conservation, and learn how they can help, but some aesthetic and usability issues limit this.</p>
+                <h3>The Solution</h3>
+                <p>Redesign the URC website based on user interviews and feedback from testing, to improve the overall user experience. </p>
+                <h3>My Roles</h3>
+                <p>UX/UI Designer, Researcher, IA</p>
+                <button class="mainButton">View Project</button>
+            </div>
+
+            <div class="edGovCard">
+                <img href="">
+                <h2>U.S. Department of Education Redesign</h2>
+                <h3>Overview</h3>
+                <p>U.S Department of Education is used to promote student achievement and preparation for global competitiveness by fostering educational excellence and ensuring equal access.</p>
+                <h3>The Problem</h3>
+                <p>Users find that navigating the Department of Education’s website can be difficult due to a lack of organization, overwhelming about of text/lack of content chunking, having to dig for information/limited navigation options, etc.</p>
+                <h3>The Solution</h3>
+                <p>To redesign the website with better organization, hierarchy, and improved navigation to improve usability based on user feedback and needs.</p>
+                <h3>My Roles</h3>
+                <p>UX/UI Designer, Researcher, IA</p>
+                <button class="mainButton">View Project</button>
             </div>
 
         </section>
+        <!--Footer Setup-->
     </body>
 </html>
