--- a/index.html
+++ b/index.html
@@ -60,8 +60,19 @@
                 <p>UX/UI Designer, Researcher, IA</p>
                 <button class="mainButton">View Project</button>
             </div>
-
         </section>
         <!--Footer Setup-->
+        <footer>
+            <div>
+                <h1 class="logoSmall">Jewelee</h1>
+                <h2>UX/UI Designer</h2>
+                <p>Copyright 2024</p>
+            </div>
+            <div>
+                <h2>Contact Me:</h2>
+                <img href="">
+                <img href="">
+            </div>
+        </footer>
     </body>
 </html>
