--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section>
             <h2 class="headerText">Projects</h2>
             <div class="urcCard">
-                <img href="">
+                <img src="images/urc.png">
                 <h2>Utah Rivers Counsel Redesign</h2>
                 <h3>Overview</h3>
                 <p>Utah Rivers Council is a NPO focused on protecting Utah’s waterways and water conservation. </p>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="edGovCard">
-                <img href="">
+                <img src="images/edgov.png">
                 <h2>U.S. Department of Education Redesign</h2>
                 <h3>Overview</h3>
                 <p>U.S Department of Education is used to promote student achievement and preparation for global competitiveness by fostering educational excellence and ensuring equal access.</p>
@@ -70,8 +70,8 @@
             </div>
             <div>
                 <h2>Contact Me:</h2>
-                <img href="">
-                <img href="">
+                <img src="images/email logo.png">
+                <img src="images/linkedin logo.png">
             </div>
         </footer>
     </body>
