--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <!--Navigation Bar Setup-->
         <nav class="navBar">
             <div class="logoBig">Jewelee</div>
-            <div class="navItems">
-                <ul>
-                    <li>About</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
+            <div class="navItemSection">
+                <ul class="navItems">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </div>
         </nav>
