about me/hero img updates
also fixed the lilita one fonts

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </nav>
         <!--Hero Img/About me Setup-->
-        <section class="heroImg">
+        <section class="heroImgCard">
             <div class="greenBox">
                 <h1 class="heroText">Hello, I'm Jewelee</h1>
                 <h3 class="subTextHero">UX/UI Designer</h3>
