finished about me card

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="greenBox">
                 <h1 class="heroText">Hello, I'm Jewelee</h1>
                 <h3 class="subTextHero">UX/UI Designer</h3>
-                <p class="bodyText">
+                <p class="bodyTextHero">
                     I discovered a passion for UI/UX Design while learning about web design in college. I love how involved users are in the process and seeing the final product come alive thanks to the collaboration of so many different processes and teams. I also love how UI/UX Design has people from so many different backgrounds, I think it creates so many wonderful opportunities to learn from one another.
                 </p>
-                <p class="bodyText">
+                <p class="bodyTextHero">
                     I also have a passion for reading and storytelling. My favorite part of a book is always the characters. I enjoy getting to see them grow and learn as the story progresses, especially when the characters are able to surprise me with how they shape the story. 
                 </p>
                 <button class="mainButton">Learn More</button>
