--- a/index.html
+++ b/index.html
@@ -34,34 +34,38 @@
             </div>
         </section>
         <!--Case Study Cards Setup-->
-        <section>
-            <h2 class="headerText">Projects</h2>
+        <section class="projectCards">
+            <h2 class="headerTextProjects">Projects</h2>
             <div class="urcCard">
-                <img src="images/urc.png">
-                <h2>Utah Rivers Counsel Redesign</h2>
-                <h3>Overview</h3>
-                <p>Utah Rivers Council is a NPO focused on protecting Utah’s waterways and water conservation. </p>
-                <h3>The Problem</h3>
-                <p>Users want to quickly and easily navigate the website to gather information on water conservation, and learn how they can help, but some aesthetic and usability issues limit this.</p>
-                <h3>The Solution</h3>
-                <p>Redesign the URC website based on user interviews and feedback from testing, to improve the overall user experience. </p>
-                <h3>My Roles</h3>
-                <p>UX/UI Designer, Researcher, IA</p>
-                <button class="mainButton">View Project</button>
+                <div class="urcContent">
+                    <img src="images/urc.png">
+                    <h2>Utah Rivers Counsel Redesign</h2>
+                    <h3>Overview</h3>
+                    <p>Utah Rivers Council is a NPO focused on protecting Utah’s waterways and water conservation. </p>
+                    <h3>The Problem</h3>
+                    <p>Users want to quickly and easily navigate the website to gather information on water conservation, and learn how they can help, but some aesthetic and usability issues limit this.</p>
+                    <h3>The Solution</h3>
+                    <p>Redesign the URC website based on user interviews and feedback from testing, to improve the overall user experience. </p>
+                    <h3>My Roles</h3>
+                    <p>UX/UI Designer, Researcher, IA</p>
+                    <button class="mainButton">View Project</button>
+                </div>
             </div>
 
             <div class="edGovCard">
-                <img src="images/edgov.png">
-                <h2>U.S. Department of Education Redesign</h2>
-                <h3>Overview</h3>
-                <p>U.S Department of Education is used to promote student achievement and preparation for global competitiveness by fostering educational excellence and ensuring equal access.</p>
-                <h3>The Problem</h3>
-                <p>Users find that navigating the Department of Education’s website can be difficult due to a lack of organization, overwhelming about of text/lack of content chunking, having to dig for information/limited navigation options, etc.</p>
-                <h3>The Solution</h3>
-                <p>To redesign the website with better organization, hierarchy, and improved navigation to improve usability based on user feedback and needs.</p>
-                <h3>My Roles</h3>
-                <p>UX/UI Designer, Researcher, IA</p>
-                <button class="mainButton">View Project</button>
+                <div class="edGovContent">
+                    <img src="images/edgov.png">
+                    <h2>U.S. Department of Education Redesign</h2>
+                    <h3>Overview</h3>
+                    <p>U.S Department of Education is used to promote student achievement and preparation for global competitiveness by fostering educational excellence and ensuring equal access.</p>
+                    <h3>The Problem</h3>
+                    <p>Users find that navigating the Department of Education’s website can be difficult due to a lack of organization, overwhelming about of text/lack of content chunking, having to dig for information/limited navigation options, etc.</p>
+                    <h3>The Solution</h3>
+                    <p>To redesign the website with better organization, hierarchy, and improved navigation to improve usability based on user feedback and needs.</p>
+                    <h3>My Roles</h3>
+                    <p>UX/UI Designer, Researcher, IA</p>
+                    <button class="mainButton">View Project</button>
+                </div>
             </div>
         </section>
         <!--Footer Setup-->
