--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <!--Navigation Bar Setup-->
         <nav class="navBar">
-            <div class="logoBig">Jewelee</div>
+            <div class="logoNav">Jewelee</div>
             <div class="navItemSection">
                 <ul class="navItems">
                     <li><a href="">About</a></li>
@@ -69,15 +69,15 @@
             </div>
         </section>
         <!--Footer Setup-->
-        <footer>
-            <div>
-                <h1 class="logoSmall">Jewelee</h1>
-                <h2>UX/UI Designer</h2>
-                <p>Copyright 2024</p>
+        <footer class="footerBox">
+            <div class="footerLogoContent">
+                <h1 class="logoFooter">Jewelee</h1>
+                <h2 class="footerText">UX/UI Designer</h2>
+                <p class="footerText">Copyright 2024</p>
             </div>
-            <div>
+            <div class="contactMe">
                 <h2>Contact Me:</h2>
-                <img src="images/email logo.png">
+                <img class="emailLogo" src="images/email logo.png">
                 <img src="images/linkedin logo.png">
             </div>
         </footer>
