trying to fix cards
messing with URC card might not go well

--- a/index.html
+++ b/index.html
@@ -53,17 +53,19 @@
             </div>
 
             <div class="edGovCard">
-                <div class="edGovContent">
+                <div class="EdGovContent">
                     <img src="images/edgov.png">
-                    <h2>U.S. Department of Education Redesign</h2>
-                    <h3>Overview</h3>
-                    <p>U.S Department of Education is used to promote student achievement and preparation for global competitiveness by fostering educational excellence and ensuring equal access.</p>
-                    <h3>The Problem</h3>
-                    <p>Users find that navigating the Department of Education’s website can be difficult due to a lack of organization, overwhelming about of text/lack of content chunking, having to dig for information/limited navigation options, etc.</p>
-                    <h3>The Solution</h3>
-                    <p>To redesign the website with better organization, hierarchy, and improved navigation to improve usability based on user feedback and needs.</p>
-                    <h3>My Roles</h3>
-                    <p>UX/UI Designer, Researcher, IA</p>
+                    <div class="textContent">
+                        <h2>U.S. Department of Education Redesign</h2>
+                        <h3>Overview</h3>
+                        <p>U.S Department of Education is used to promote student achievement and preparation for global competitiveness by fostering educational excellence and ensuring equal access.</p>
+                        <h3>The Problem</h3>
+                        <p>Users find that navigating the Department of Education’s website can be difficult due to a lack of organization, overwhelming about of text/lack of content chunking, having to dig for information/limited navigation options, etc.</p>
+                        <h3>The Solution</h3>
+                        <p>To redesign the website with better organization, hierarchy, and improved navigation to improve usability based on user feedback and needs.</p>
+                        <h3>My Roles</h3>
+                        <p>UX/UI Designer, Researcher, IA</p>
+                    </div>
                     <button class="mainButton">View Project</button>
                 </div>
             </div>
