--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="edGovCard">
-                <div class="EdGovContent">
+                <div class="edGovContent">
                     <img src="images/edgov.png">
                     <div class="textContent">
                         <h2>U.S. Department of Education Redesign</h2>
@@ -66,8 +66,8 @@
                         <h3>My Roles</h3>
                         <p>UX/UI Designer, Researcher, IA</p>
                     </div>
-                    <button class="mainButton">View Project</button>
                 </div>
+                <button class="mainButton">View Project</button>
             </div>
         </section>
         <!--Footer Setup-->
