cards are now cards

--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
             <div class="urcCard">
                 <div class="urcContent">
                     <img src="images/urc.png">
-                    <h2>Utah Rivers Counsel Redesign</h2>
-                    <h3>Overview</h3>
-                    <p>Utah Rivers Council is a NPO focused on protecting Utah’s waterways and water conservation. </p>
-                    <h3>The Problem</h3>
-                    <p>Users want to quickly and easily navigate the website to gather information on water conservation, and learn how they can help, but some aesthetic and usability issues limit this.</p>
-                    <h3>The Solution</h3>
-                    <p>Redesign the URC website based on user interviews and feedback from testing, to improve the overall user experience. </p>
-                    <h3>My Roles</h3>
-                    <p>UX/UI Designer, Researcher, IA</p>
-                    <button class="mainButton">View Project</button>
+                    <div class="textContent">
+                        <h2>Utah Rivers Counsel Redesign</h2>
+                        <h3>Overview</h3>
+                        <p>Utah Rivers Council is a NPO focused on protecting Utah’s waterways and water conservation. </p>
+                        <h3>The Problem</h3>
+                        <p>Users want to quickly and easily navigate the website to gather information on water conservation, and learn how they can help, but some aesthetic and usability issues limit this.</p>
+                        <h3>The Solution</h3>
+                        <p>Redesign the URC website based on user interviews and feedback from testing, to improve the overall user experience. </p>
+                        <h3>My Roles</h3>
+                        <p>UX/UI Designer, Researcher, IA</p>
+                    </div>
                 </div>
+                <button class="mainButton" id="cardButton">View Project</button>
             </div>
 
             <div class="edGovCard">
@@ -67,7 +69,7 @@
                         <p>UX/UI Designer, Researcher, IA</p>
                     </div>
                 </div>
-                <button class="mainButton">View Project</button>
+                <button class="mainButton" id="cardButton">View Project</button>
             </div>
         </section>
         <!--Footer Setup-->
